--- a/Meditrack 2.0/Meditrack 2.0/Form1.resx
+++ b/Meditrack 2.0/Meditrack 2.0/Form1.resx
@@ -207,7 +207,7 @@
         YII=
 </value>
   </data>
-  <data name="button4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnProduct.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
         EwAACxMBAJqcGAAAAQNJREFUWEdjGAWjYBTAgOPij3McF33447jo3R+nxe9mQYUZLBlixGyZk2/YcKT/
