--- a/Meditrack 2.0/Meditrack 2.0/Form1.resx
+++ b/Meditrack 2.0/Meditrack 2.0/Form1.resx
@@ -118,6 +118,18 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAWxJREFUWEftVkFOwzAQXHgD/AqJ9sALKBLiB+4lr4AL4gMFDnwI+AO9w069UW1n
+        1rjIUg9kpFGi7IxnnVixZcaMElcSzpcSXpay3iq/O3G7kPXzhQxnFuPDwtkgHRg2FuNDhT1nnnEh4cti
+        fDBjT1qMD2bqSYvxwUz67d71umpbHzvNnb7uz2ntjw1cSrhGbZDhVAd+ZBoQNWig1fsbpkGtCmbCrMaB
+        vSbScFz12WupAVGvgpkiw9MYoDjRwHuvps8e9rWcpvHBTHuyJtrDQdP5YKaU5atO79mnKQltFcw0ZTZr
+        4NeZjzS9D2aactpAviZ8mt4HM6U88idgC44tTOaNNJ0PZoqsrfb2Jkzjg5k04OAfke7/b6UGRL0KZlKu
+        UPPCR6ZNaAO3TINaFcykb8A2I/57zbnbjKD9yJ9HWowPZupJi/HBTD1pMT5UdNwjGU6vzNyHDYdSHJ3R
+        BLrlgxzOOFbYNB3LZ/wziPwA9dOWxPFcUZoAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="btnLogout.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
